--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 		</dependency>
 	</dependencies>
 
+		<dependency>
+   		<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.25</version>
+	</dependency>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -37,5 +43,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	
 
 </project>
